--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_NDISmain.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_NDISmain.yml
@@ -6,12 +6,13 @@ sections:
   - disability: Disability Information 
   - assessment: Assessment of Client’s Functional Capacity
     subsections:
-    - part 1: Communication and Understanding 
-    - part 2: Getting Around
-    - part 3: Self-Care
-    - part 4: Getting Along with People
-    - part 5: Life Activities
-    - part 6: Participation in Society 
+    - part 1: Part 1 - Communication and Understanding 
+    - part 2: Part 2 - Getting Around
+    - part 3: Part 3 - Self-Care
+    - part 4: Part 4 - Getting Along with People
+    - part 5: Part 5 - Life Activities
+    - part 6: Part 6 - Participation in Society 
+auto open: True
 ---
 features:
   navigation: True
@@ -24,6 +25,7 @@ include:
   - HSC_disabilitymain.yml
   - HSC_assessment_table.yml
   - HSC_residenceineligibility.yml
+  - HSC_disabilityineligible.yml
   - HSC_eligible.yml
   - HSC_ineligible.yml
 ---
@@ -35,52 +37,56 @@ objects:
 ---
 metadata:
   title: |
-    HSC - NDIS Navigator
+    HSC NDIS Navigator
   short title: |
     HSC NDIS
   show login: True
 ---
 objects:
   - KWlogo: DAStaticFile.using(filename='hutt-st-centre-logo.svg')
+  - NDISlogo: DAStaticFile.using(filename='NDIS_logo.png')
 ---
 mandatory: True
 code: |
-  set_parts(logo='<img src="' + KWlogo.url_for() + '" style="height: 50px;">')
+  set_parts(logo='<img src="' + KWlogo.url_for() + '" style="height: 55px; width: 160px;">')
 ---
 features:
   css: HSC.css
   debug: True
-  hide standard menu: False
+  hide standard menu: True
 ---
 mandatory: True
 question: Hutt Street Centre NDIS Navigator 
 subquestion: |
-  Welcome to our NDIS Navigator!
-  
+  <span class="KWwelcomestyle">
+    Welcome!
+  </span>  
   ##### **PLEASE READ THE FOLLOWING INFORMATION TO THE CLIENT:** 
-  
+
   The purpose of this application is to decide whether you are likely to be 
   eligible for the National Disability Insurance Scheme (NDIS). 
   
-  The application will collect your ***personal information*** and ***health information.*** 
+  This application will asks you a set of questions and it will be collecting your **personal information** and **health information** in accordance with the Hutt Street Centre's privacy policy and the *Privacy Act 1988 (Cth)*.
+ 
+  Please answer all questions honestly.
   
-  ##### ***Disclaimer:***  
-  
+  <span class="KWdisclaimer"> 
+    *Disclaimer:*
+  </span>     
     This application and its outcomes **DO NOT** constitute legal advice. 
     
-    This application does not guarantee you will receive funding from the NDIS. 
-    It will only assess whether you may be eligible for the NDIS. 
+    This application does not guarantee that you will receive funding from the NDIS. 
+    It will only assess whether you may be eligible for the NDIS in accordance to the *National Disability Insurance Scheme (NDIS) Act 2013 (Cth).*
    
    **The NDIA will make the final decision.**
-    
-    Please answer all questions honestly.
    
     If you continue, you understand and accept these terms. 
-
-field: sees_nav_bar    
+ 
+section: intro
 buttons:
   - "I accept and understand": continue
-  - "I do not accept": restart
+  - "I do not accept": exit
+    url: https://www.huttstcentre.org.au/
 ---
 mandatory: True
 code: |
@@ -100,26 +106,16 @@ code: |
     assessment_part6
     score_part1
     score_part2
-    score_part3
-    score_part4
-    score_part5
-    score_part6
     overall_score
-    next_page
     
-    
-  if (overall_score >= 50):
+  if (overall_score >= 50 or domain_1 >= 3 or domain_2 >= 3 or domain_3 >= 3 or domain_4 >= 3 or domain_5 >= 3 or domain_6 >= 3):
     endpoint['eligible']
   else: 
     endpoint['ineligible']
 ---
-event: intro
-code: |
-  force_ask('sees_nav_bar')
----
 event: personal
 code: | 
-  force_ask('client_firstname', 'client_lastname', 'client.birthdate', 'client_gender')
+  force_ask('client_firstname')
 ---
 event: residency 
 code: |
@@ -156,7 +152,4 @@ code: |
 event: part 6
 code: |
   force_ask('D6_1')
----
-features:
-  navigation: True
 ---
