--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_disabilitymain.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_disabilitymain.yml
@@ -44,7 +44,7 @@ question: Part 1 - Understanding and Communicating
 subquestion: |
   *This section of the questionnaire will ask you about your understanding and communication skills.*
   
-  Use the number 0, 1, 2, 3 and 4 when responding. 
+    Use the number 0, 1, 2, 3 and 4 when responding. 
   
   % for KWitem in KWscore:
   - ${ KWitem }
@@ -62,6 +62,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Encourage the client to think about their concentration in usual circumstances, rather than when they are preoccupied by a problem or are in an unusually distracting environment.
   - Remembering to do important things?: D1_2
     datatype: integer
     input type: radio
@@ -71,6 +73,9 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+       Ask clients how well they remember to do things that are important to them or to their family.  
+       It does not refer to remembering irrelevant content or detailed information from the past. 
   - Analysing and finding solutions to problems in day-to-day life? : D1_3
     datatype: integer
     input type: radio
@@ -80,6 +85,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Ask client to identify a problem they encountered in the past 30 days, and ask them to consider how well they identified that a problem existed; broke it down into manageable parts; developed a list of possible solutions; determined the pros and cons of each solution; determined the best solution given all considerations; executed and evaluated the chosen solution; and selected an alternate solution if the first choice was not successful.
   - Learning a new task, for example, learning how to get to a new place?: D1_4
     datatype: integer
     input type: radio
@@ -89,6 +96,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Other than learning how to get to a new place, encourage clients to to think of other situations in the past month where learning something new was required, such as a new game or craft. 
   - Generally understanding what people say?: D1_5
     datatype: integer
     input type: radio
@@ -98,6 +107,9 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Ask clients to consider their usual mode of communication (e.g. spoken language, sign language, use of an assistive device such as a hearing aid, etc.) and rate the overall degree of difficulty they have in understanding the messages of others. 
+      Difficulties due to different mother tongues should be excluded when rating this question. 
   - Starting and maintaining a conversation?: D1_6
     datatype: integer
     input type: radio
@@ -107,12 +119,21 @@ fields:
       - 2
       - 3
       - 4
-
+    help: | 
+      Ask clients to consider any and all other factors related to their disability and relevant to them in starting and maintaining a conversation. 
+      Examples might include hearing loss, language problems (e.g. as after a stroke), stuttering and anxiety.
+      
 continue button field: assessment_part1
 ---
 question: Part 2 - Getting Around 
 subquestion: |
   *This section of the questionnaire will ask you about your difficulties in getting around.*
+  
+   Use the number 0, 1, 2, 3 and 4 when responding. 
+  
+  % for KWitem in KWscore:
+  - ${ KWitem }
+  % endfor
   
   **In the past 30 days, how much difficulty did you have in:**
 section: part 2
@@ -135,6 +156,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question refers to standing up from sitting in a chair, on a bench or a toilet. It does not refer to standing up from sitting on the floor.
   - Moving around inside your home?: D2_3
     datatype: integer
     input type: radio
@@ -144,6 +167,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question refers to moving from room to room, and moving within rooms, using assistive devices or personal help that is usually in place. If a client lives in a house with multiple floors, this question also includes getting from one floor to another, as needed.
   - Getting out of your home?: D2_4
     datatype: integer
     input type: radio
@@ -153,6 +178,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question seeks information about the client's physical aspects (mobility) of getting out of the home and also their emotional or mental aspects of leaving the home (e.g. depression, anxiety, etc.) 
   - Walking a long distance, such as a kilometre (or equivalent)?: D2_5
     datatype: integer
     input type: radio
@@ -162,11 +189,19 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      One kilometre is equivalent to 0.62 miles. 
 continue button field: assessment_part2
 ---
 question: Part 3 - Self-Care  
 subquestion: |
   *This section of the questionnaire will ask you about your difficulties in taking care of yourself*
+  
+   Use the number 0, 1, 2, 3 and 4 when responding. 
+  
+  % for KWitem in KWscore:
+  - ${ KWitem }
+  % endfor
   
   **In the past 30 days, how much difficulty did you have in:**
 section: part 3
@@ -180,6 +215,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question refers to clients washing their entire body in whatever manner is usual for their culture. If clients report that they have not washed their bodies in the past 30 days, ask whether this is due to their disability. If clients report that it is due to their disability, then score the item '4'. If clients report that the lack of washing is not due to their disability, then score the item '0'.
   - Getting dressed?: D3_2
     datatype: integer
     input type: radio
@@ -189,6 +226,8 @@ fields:
       - 2
       - 3
       - 4
+    help: |
+      This question includes all aspects of dressing the upper and lower body. Ask clients to consider activities such as gathering clothing from storage areas (i.e. closet, dressers) and securing buttons, tying knots, etc., when scoring. 
   - Eating?: D3_3 
     datatype: integer
     input type: radio
@@ -198,6 +237,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question refers to feeding oneself (cutting food, etting food or drink from a plate or glass to the mouth), swallowing both food and drink, and mental or emotional factors that may contribute to difficulty in eating, such as anorexia, bulimia, or depression. This question **does not** refer to meal preparation.
   - Staying by yourself for a few days?: D3_4
     datatype: integer
     input type: radio
@@ -206,14 +247,22 @@ fields:
       - 1
       - 2
       - 3
-      - 4
+      - 4       
 continue button field: assessment_part3
 ---
 question: Part 4 - Getting Along with People  
 subquestion: |
-  *This section of the questionnaire will ask you about your difficulties in getting along with people.*
+  *This section of the questionnaire will ask you about your difficulties in getting along with people.* 
+  
+  'People' may be those with whom the client is intimate or knows well (e.g. spouse or partner, family members or close friends), or those whom the client does not know at all (e.g. strangers).
   
   Please remember that I am only asking only about difficulties that are due to your disability or injury. 
+  
+  Use the number 0, 1, 2, 3 and 4 when responding. 
+  
+  % for KWitem in KWscore:
+  - ${ KWitem }
+  % endfor
   
   **In the past 30 days, how much difficulty did you have in:**
 section: part 4
@@ -226,7 +275,7 @@ fields:
       - 1
       - 2
       - 3
-      - 4
+      - 4 
   - Maintaining a friendship?: D4_2
     datatype: integer
     input type: radio
@@ -236,6 +285,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question includes staying in touch, interacting with friends in customary ways, initiating activities with friends and participating in activities when invited.
   - Getting along with people who are close to you?: D4_3
     datatype: integer
     input type: radio
@@ -245,6 +296,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Ask clients to consider any relationships that they define as close. These may be within or outside the family.
   - Making new friends?: D4_4
     datatype: integer
     input type: radio
@@ -254,6 +307,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question includes seeking opportunities to meet new people, following up on invitations to get together or social and communication actions to make contact and to develop a friendship.
   - Sexual activities?: D4_5
     datatype: integer
     input type: radio
@@ -269,6 +324,12 @@ question: Part 5 - Life Activities
 subquestion: |
   *This section of the questionnaire will ask you about activities involved in maintaining your household, and in caring for the people who you live with or are close to. These activities include cooking, cleaning, shopping, caring for others and caring for your belongings.* 
   
+   Use the number 0, 1, 2, 3 and 4 when responding. 
+  
+  % for KWitem in KWscore:
+  - ${ KWitem }
+  % endfor
+  
   **In the past 30 days, how much difficulty did you have in:**
 section: part 5
 fields:
@@ -281,6 +342,8 @@ fields:
       - 2
       - 3
       - 4
+    help: |
+      Any difficulty that clients encounter in maintaining the household and in caring for family members or other people they are close to. Ask clients to consider all types of household or family needs, including physical, emotional, financial and psychological needs. 
   - Doing your most important household tasks well?: D5_2
     datatype: integer
     input type: radio
@@ -299,6 +362,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Ask clients to provide ratings based on their own appraisal of how well household tasks are completed and whether needed household work gets done. *** Clients should score based only on the difficulties faced due to their disability, not those that may be experienced for other reasons such as not having enough time (unless this reason is somehow linked to their disability).
   - Getting your household work done as quickly as needed?: D5_4
     datatype: integer
     input type: radio
@@ -308,6 +373,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This question refers to the timely meeting of expectations and needs of those clients whom one lives with (or is close to), in relation to household tasks and responsibilities.
   - Your day-to-day work/school?: D5_5
     datatype: integer
     input type: radio
@@ -317,6 +384,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      This includes issues such as attending on time, responding to supervision, supervising others, planning and organizing, meeting expectations in the workplace and any other relevant activities.
   - Doing your most important work/school tasks well?: D5_6
     datatype: integer
     input type: radio
@@ -326,6 +395,8 @@ fields:
       - 2
       - 3
       - 4
+    help: | 
+      Doing work or school tasks “well” refers to completing them as expected by a supervisor or teacher, by clients’ own standards or as specified in the performance criteria for a job or school.
   - Getting all the work done that you need to do?: D5_7
     datatype: integer
     input type: radio
@@ -350,6 +421,11 @@ question: Part 6 - Participation in Society
 subquestion: |
   *This section of the questionnaire will ask you about your participation in society and the impact of your disability/injury on you and your family.* 
 
+  Use the number 0, 1, 2, 3 and 4 when responding. 
+  
+  % for KWitem in KWscore:
+  - ${ KWitem }
+  % endfor
 section: part 6
 fields:
   - How much of a problem did you have joining in community activities (for example, festivities, religious or other activities) in the same way as anyone else can?: D6_1
@@ -428,10 +504,27 @@ continue button field: assessment_part6
 ---
 question: Overall Score 
 subquestion: |
-   Total score = ${ overall_score }
-
+   
+   Domain    | Domain Score (%)    | Average Domain Score 
+   ----------|---------------------|---------------------
+   1         | ${ (part_1) * 100 } | ${ domain_1 }
+   2         | ${ (part_2) * 100 } | ${ domain_2 }
+   3         | ${ (part_3) * 100 } | ${ domain_3 }
+   4         | ${ (part_4) * 100 } | ${ domain_4 }
+   5         | ${ (part_5) * 100 } | ${ domain_5 }
+   6         | ${ (part_6) * 100 } | ${ domain_6 }
+   **Average Total** | **${ overall_score }** | **${ average_all }** 
 continue button field: next_page
 ---
+code: | 
+  domain_1 = (D1_1 + D1_2 + D1_3 + D1_4 + D1_5 + D1_6) / 6
+  domain_2 = (D2_1 + D2_2 + D2_3 + D2_4 + D2_5) / 5
+  domain_3 = (D3_1 + D3_2 + D3_3 + D3_4) / 4
+  domain_4 = (D4_1 + D4_2 + D4_3 + D4_4 + D4_5) / 5
+  domain_5 = (D5_1 + D5_2 + D5_3 + D5_4 + D5_5 + D5_6 + D5_7 + D5_8) / 8
+  domain_6 = (D6_1 + D6_2 + D6_3 + D6_4 + D6_5 + D6_6 + D6_7 + D6_8) / 8
+  average_all = round(((domain_1 + domain_2 + domain_3 + domain_4 + domain_5 + domain_6) / 6))
+--- 
 code: |
   part_1 = (D1_1 + D1_2 + D1_3 + D1_4 + D1_5 + D1_6) / 24
   part_2 = (D2_1 + D2_2 + D2_3 + D2_4 + D2_5) / 20
@@ -439,5 +532,13 @@ code: |
   part_4 = (D4_1 + D4_2 + D4_3 + D4_4 + D4_5) / 20
   part_5 = (D5_1 + D5_2 + D5_3 + D5_4 + D5_5 + D5_6 + D5_7 + D5_8) / 32
   part_6 = (D6_1 + D6_2 + D6_3 + D6_4 + D6_5 + D6_6 + D6_7 + D6_8) / 32
-  overall_score = ((part_1 + part_2 + part_3 + part_4 + part_5 + part_6) / 6) * 100
+  overall_score = round(((part_1 + part_2 + part_3 + part_4 + part_5 + part_6) / 6) * 100)
+---
+code: | 
+  total_1 = D1_1 + D1_2 + D1_3 + D1_4 + D1_5 + D1_6
+  total_2 = D2_1 + D2_2 + D2_3 + D2_4 + D2_5
+  total_3 = D3_1 + D3_2 + D3_3 + D3_4
+  total_4 = D4_1 + D4_2 + D4_3 + D4_4 + D4_5
+  total_5 = D5_1 + D5_2 + D5_3 + D5_4 + D5_5 + D5_6 + D5_7 + D5_8
+  total_6 = D6_1 + D6_2 + D6_3 + D6_4 + D6_5 + D6_6 + D6_7 + D6_8
 ---
