--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_personalinfo.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_personalinfo.yml
@@ -1,13 +1,13 @@
 objects: 
   - client: Individual
 ---
-question: Personal Information of Client 
+question: Client's Personal Information 
 subquestion: |
 fields: 
   - First Name: client_firstname
   - Last Name: client_lastname
-  - Date of Birth (DD/MM/YYYY): client.birthdate
-    datatype: date.format_date('d/MM/YYYY')
+  - Date of Birth: client.birthdate
+    datatype: date
   - Gender: client_gender
     datatype: radio
     choices: 
