--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
@@ -13,7 +13,7 @@ terms:
       - self-management.
 ---
 event: endpoint['eligible']
-question: Eligibility Requirement Met 
+question: Eligibility Requirements Met 
 subquestion: |
   Thank you for completing the NDIS Eligibility Questionnaire. 
   
