--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
@@ -13,6 +13,7 @@ terms:
       - self-management.
 ---
 event: endpoint['eligible']
+decoration: tick icon 
 question: Eligibility Requirements Met 
 subquestion: |
   Thank you for completing the NDIS Eligibility Questionnaire. 
