--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_ineligible.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_ineligible.yml
@@ -13,6 +13,7 @@ include:
   - HSC_assessment_table.yml
 ---
 event: endpoint['ineligible']
+decoration: cross icon
 question: Eligibility Requirements Not Met 
 subquestion: |
   Thank you for completing the HSC NDIS Navigator Questionnaire. 
