--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_NDISmain.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_NDISmain.yml
@@ -166,10 +166,10 @@ code: |
 ---  
 default screen parts:
   post: |
-    <div style="display: flex; height: 200px; align-items: flex-end; flex-direction: row-reverse">
+    <div style="display: flex; height: 100px; align-items: flex-end; flex-direction: row-reverse">
     <div style="margin: 5px"><img src="https://staff.flinders.edu.au/etc.clientlibs/flinders/clientlibs/clientlib-site/resources/images/flinderuni_main_logo_black.png" height="60">
     </div>
-    <div style="margin: 5px; text-align: right"> 
+    <div style="margin: 5px; text-align: center"> 
     <cite><small><i>
     Developed by Flinders University in collaboration with
     <br>
