--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
@@ -34,5 +34,7 @@ attachment:
     - pdf 
  
 buttons: 
-  - Finish: restart 
+  - Finish: exit
+    https://huttstcentre.org.au
+  - Restart: restart
 ---
