--- a/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
+++ b/docassemble/LLAW33012020S1P12/data/questions/HSC_eligible.yml
@@ -35,6 +35,6 @@ attachment:
  
 buttons: 
   - Finish: exit
-    https://huttstcentre.org.au
+    url: https://huttstcentre.org.au
   - Restart: restart
 ---
